tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_turbofish_use_generic_type_alias_with_turbofish_in_method_call_errors/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type i32, found type bool
   ┌─ src/main.nr:15:37
   │
15 │             let _ = Bar::<i32>::new(true);
   │                                     ----
   │

Aborting due to 1 previous error
